--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.16.1",
+    "node-cron": "^4.2.1",
     "sequelize": "^6.35.2"
   }
 }
