--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,20 @@ yarn-error.log*
 
 # OS
 Thumbs.db
+
+# Docker
+.dockerignore
+docker-compose.yml
+Dockerfile
+
+#package-lock.json
+package-lock.json
+package.json
+
+#docs
+docs
+database_model.puml
+
+#vite del frontend
+frontend/vite.config.js 
+
